src/test/ui/methods/method-self-arg-1.stderr
error[E0308]: mismatched types
  --> $DIR/method-self-arg-1.rs:11:14
   |
LL |     Foo::bar(x);
   |              ^
   |              |
   |              expected `&Foo`, found struct `Foo`
   |              help: consider borrowing here: `&x`

error[E0308]: mismatched types
  --> $DIR/method-self-arg-1.rs:13:14
   |
LL |     Foo::bar(&42);
   |              ^^^ expected struct `Foo`, found integer
   |
   = note: expected reference `&Foo`
              found reference `&{integer}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
